--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.5.0
   intl: ^0.18.0
+  firebase_core: ^2.9.0
 
 dev_dependencies:
   flutter_test:
