--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^4.5.0
   intl: ^0.18.0
   firebase_core: ^2.9.0
+  firebase_crashlytics: ^3.1.0
+  firebase_analytics: ^10.2.0
 
 dev_dependencies:
   flutter_test:
